geniburgh + cossack fixes + fixed capitals + zakarturi changes

--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -19,9 +19,10 @@
  geniburgh_mercenary_power_gain_modifier:0 "Reformation Effort Modifier"
  geniburgh_decrease_power:0 "Raise the Recruits"
  geniburgh_decrease_power_desc:0 "Conscript new soldiers from the nearby settlements."
+ NAR_recruits_raised:0 "Recruits Raised"
  geniburgh_spend_power_for_modifier:0 "Bribe local rulers"
  geniburgh_spend_power_for_modifier_desc:0 "'Convince' lords of these lands to submit to our will."
- NAR_bribed_local_rulers:0 "Bribe local rulers"
+ NAR_bribed_local_rulers:0 "Bribed local rulers"
  geniburgh_increase_power:0 "Invest in the Administration"
  geniburgh_increase_power_desc:0 "Increase our efforts in establishing nation-wide administration."
  NAR_Reform_into_a_real_country_TT:0 "§YGeniburgh Company§! will get an event to reform into §YNiewebehatland§!."
