--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -146,6 +146,8 @@
  zakarturi_group:0 "Zakarturi"
  mesiheisi:0 "Mesiheisi"
  gapishvro:0 "Gapishvro"
+ digacopsi:0 "Digacopsi"
+ mostqavelisi:0 "Mostqavelisi"
 
  akkcortians_group:0 "Akkcortians"
  cyromeids:0 "Cyromeid"
