--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -759,3 +759,7 @@
  SAA_ADJ:0 "Saramarani"
  MAH:0 "Maghalak"
  MAH_ADJ:0 "Maghalaki"
+ MAT:0 "Matserval"
+ MAT_ADJ:0 "Matservali"
+ SVI:0 "Svirekh"
+ SVI_ADJ:0 "Svirekhian"
