--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -1811,7 +1811,7 @@
  bribe_effect_scales_with_estate_nobles_tt:0 "Scales invertedly with the loyalty of the §Y[Root.GetNobilityName]§! ([Root.GetNobilityLoyaltyStatus])"
  bribe_effect_scales_with_estate_burghers_tt:0 "Scales invertedly with the loyalty of the §Y[Root.GetBurghersName]§! ([Root.GetBurghersLoyaltyStatus])"
  bribe_effect_scales_with_estate_vaisyas_tt:0 "Scales invertedly with the loyalty of the §Y[Root.GetVaishyasName]§! ([Root.GetVaisyasLoyaltyStatus])"
- bribe_effect_scales_with_estate_cossacks_tt:0 "Scales invertedly with the loyalty of the §Y[Root.GetCossacksName]§! ([Root.GetCossacksLoyaltyStatus])"
+ bribe_effect_scales_with_estate_cossacks_tt:0 "Scales invertedly with the loyalty of the §Y$ESTATE_NAME$§! ([Root.GetCossacksLoyaltyStatus])"
  bribe_effect_scales_with_estate_nomadic_tribes_tt:0 "Scales invertedly with the loyalty of the §Y[Root.GetTribesName]§! ([Root.GetTribesLoyaltyStatus])"
  bribe_effect_scales_with_estate_dhimmi_tt:0 "Scales invertedly with the loyalty of the §Y[Root.GetDhimmiName]§! ([Root.GetDhimmiLoyaltyStatus])"
  bribe_effect_scales_with_estate_jains_tt:0 "Scales invertedly with the loyalty of the §Y[Root.GetJainsName]§! ([Root.GetJainsLoyaltyStatus])"
@@ -1826,7 +1826,7 @@
  issue_effects_with_estate_nobles_influence_tt:0 "§YScales with the influence of the [Root.GetNobilityName]§!"
  issue_effects_with_estate_burghers_influence_tt:0 "§YScales with the influence of the [Root.GetBurghersName]§!"
  issue_effects_with_estate_vaisyas_influence_tt:0 "§YScales with the influence of the [Root.GetVaishyasName]§!"
- issue_effects_with_estate_cossacks_influence_tt:0 "§YScales with the influence of the [Root.GetCossacksName]§!"
+ issue_effects_with_estate_cossacks_influence_tt:0 "§YScales with the influence of the $ESTATE_NAME$§!"
  issue_effects_with_estate_nomadic_tribes_influence_tt:0 "§YScales with the influence of the [Root.GetTribesName]§!"
  issue_effects_with_estate_dhimmi_influence_tt:0 "§YScales with the influence of the [Root.GetDhimmiName]§!"
  issue_effects_with_estate_jains_influence_tt:0 "§YScales with the influence of the [Root.GetJainsName]§!"
@@ -3941,22 +3941,22 @@
  estate_vaisyas_financial_demand_desc:0 "In times of need, the [Root.GovernmentName] can forcefully seize the possessions of the [Root.GetVaishyasName]. In return, the [Root.GetVaishyasName] has expanded privileges which grants them more power in the state's affairs."
  ####COSSACKS PRIVILEGES###
  estate_cossacks_freedom_of_the_steppes:0 "Freedom of the Steppes"
- estate_cossacks_freedom_of_the_steppes_desc:0 "Asserting control over the steppes is a difficult and taxing endeavor. Instead of governing the steppes ourselves it would be wise if we let the [Root.GetCossacksName] populate these vast areas and only request their military servitude in return."
+ estate_cossacks_freedom_of_the_steppes_desc:0 "Asserting control over the steppes is a difficult and taxing endeavor. Instead of governing the steppes ourselves it would be wise if we let the $ESTATE_NAME$ populate these vast areas and only request their military servitude in return."
  estate_cossacks_freedom_of_the_steppes_gt:0 "Every owned §YSteppes§! province gains the following bonus:"
  estate_cossacks_freedom_of_the_steppes_rt:0 "The modifier '§YFreedom of the Steppes§!' is removed from all §YSteppes§! provinces."
  estate_cossacks_freedom_of_the_steppes_mod:0 "Freedom of the Steppes"
- desc_estate_cossacks_freedom_of_the_steppes_mod:0 "This province is completely self-governed by the [Root.GetCossacksName]."
- estate_cossacks_grant_military_leadership:0 "[Root.GetCossacksName] Military Leadership"
- estate_cossacks_grant_military_leadership_desc:1 "The [Root.GetCossacksName] are excellent warriors and leaders. It is only natural that we should grant them a chance to prove themselves as military advisors for our armies."
- estate_cossacks_military_service:0 "[Root.GetCossacksName] Military Service"
- estate_cossacks_military_service_desc:0 "Due to the combat-focused nature of their culture, the [Root.GetCossacksName] serve the [Root.GetAdjective] military as irregular troops, supporting our infantry and artillery as the cavalry force."
- estate_cossacks_expand_cossacks_raiders:0 "Legalize the [Root.GetCossacksName] Raids"
- estate_cossacks_expand_cossacks_raiders_desc:0 "Technically, the [Root.GetCossacksName] are citizens of [Root.GetName] and therefore have to obey our laws. Practically, the steppes have little interest in concepts such as laws. The [Root.GetCossacksName] take what they need from those unfortunate enough to border them.\nWe would do them a great favor if we legalize their actions and take their raids against foreign countries as our own responsibility."
+ desc_estate_cossacks_freedom_of_the_steppes_mod:0 "This province is completely self-governed by the $ESTATE_NAME$."
+ estate_cossacks_grant_military_leadership:0 "$ESTATE_NAME$ Military Leadership"
+ estate_cossacks_grant_military_leadership_desc:1 "The $ESTATE_NAME$ are excellent warriors and leaders. It is only natural that we should grant them a chance to prove themselves as military advisors for our armies."
+ estate_cossacks_military_service:0 "$ESTATE_NAME$ Military Service"
+ estate_cossacks_military_service_desc:0 "Due to the combat-focused nature of their culture, the $ESTATE_NAME$ serve the [Root.GetAdjective] military as irregular troops, supporting our infantry and artillery as the cavalry force."
+ estate_cossacks_expand_cossacks_raiders:0 "Legalize the $ESTATE_NAME$ Raids"
+ estate_cossacks_expand_cossacks_raiders_desc:0 "Technically, the $ESTATE_NAME$ are citizens of [Root.GetName] and therefore have to obey our laws. Practically, the steppes have little interest in concepts such as laws. The $ESTATE_NAME$ take what they need from those unfortunate enough to border them.\nWe would do them a great favor if we legalize their actions and take their raids against foreign countries as our own responsibility."
  estate_cossacks_expand_cossacks_raiders_gt:0 "The event '§YCossack Aggression§!' now grants additional bonuses for §Y[Root.GetName]§!."
  estate_cossacks_expand_cossacks_raiders_rt:0 "The event '§YCossack Aggression§!' no longer grants additional bonuses."
- estate_cossacks_expand_cossacks_raiders_at:0 "Our [Root.GetCossacksName] have returned with loot, giving the following effects:"
+ estate_cossacks_expand_cossacks_raiders_at:0 "Our $ESTATE_NAME$ have returned with loot, giving the following effects:"
  estate_cossacks_exempt_from_bureaucracy:0 "Exempt from Bureaucracy"
- estate_cossacks_exempt_from_bureaucracy_desc:0 "Nobody likes bureaucracy - and the [Root.GetCossacksName] are no exception to this. While this makes controling the [Root.GetCossacksName] more difficult, exempting them from our administrative institution will at least guarantee their loyalty."
+ estate_cossacks_exempt_from_bureaucracy_desc:0 "Nobody likes bureaucracy - and the $ESTATE_NAME$ are no exception to this. While this makes controling the $ESTATE_NAME$ more difficult, exempting them from our administrative institution will at least guarantee their loyalty."
  ####NOMADIC TRIBES PRIVILEGES###
  estate_nomadic_tribes_autonomy_of_the_tribes:0 "Autonomy of the [Root.GetTribesName]"
  estate_nomadic_tribes_autonomy_of_the_tribes_desc:0 "Our realm is large, yet infrastructure is sparse. In order to keep control over the steppes we must allow the [Root.GetTribesName] to have the autonomy to govern their territory on our behalf."
@@ -5059,7 +5059,7 @@
  flavor_rus.307.a:0 "Ignore these concerns"
  flavor_rus.307.b:0 "Introduce the Serfdom"
  flavor_rus.308.t:0 "The Great Uprising!"
- flavor_rus.308.desc:0 "Despite all governmental efforts to pacify the masses with any mean necessary, the serfs have disobeyed their masters and have met in [revolt_province.GetName] to start an open rebellion against the [Root.Monarch.GetTitle]. Led by displaced [Root.GetCossacksName], these rebels question [Root.Monarch.GetName]'s legitimacy. This uprising motivated many others of the commoners to revolt against the ruling class..."
+ flavor_rus.308.desc:0 "Despite all governmental efforts to pacify the masses with any mean necessary, the serfs have disobeyed their masters and have met in [revolt_province.GetName] to start an open rebellion against the [Root.Monarch.GetTitle]. Led by displaced $ESTATE_NAME$, these rebels question [Root.Monarch.GetName]'s legitimacy. This uprising motivated many others of the commoners to revolt against the ruling class..."
  flavor_rus.308.a:0 "The masses are moving..."
  flavor_rus.308.a.tt:1 "Every owned province in the §YRussia§!, §YRuthenia§!, §YUral§! and §YPontic Steppe§! region which produces §YGrain§!, §YLivestock§! or §YWool§! gains the following effects:"
  flavor_rus.309.t:0 "Rise of the Burgher Class"
