--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -703,7 +703,7 @@
  estate_privileges_and_agendas_events.3.k:1 "The Proposal of the [Root.GetRajputsName]"
  estate_privileges_and_agendas_events.3.l:1 "The Proposal of the [Root.GetJanissariesName]"
  estate_privileges_and_agendas_events.3.m:1 "The Proposal of the [Root.GetEunuchsName]"
- estate_privileges_and_agendas_events.3.n: "The Proposal of the [Root.GetPeasantryName]"
+ estate_privileges_and_agendas_events.3.n:0 "The Proposal of the [Root.GetPeasantryName]"
  estate_privileges_and_agendas_events.3.o:1 "The Proposal of the [Root.GetGhilmanName]"
  estate_privileges_and_agendas_events.6.t:0 "Selling of Crownland"
  estate_privileges_and_agendas_events.6.desc:0 "The treasury of our [Root.GovernmentName] is in a dire situation. Fortunately for us, our estates are very much interested in buying some of our land. Who should we sell our precious property to?"
@@ -1055,7 +1055,7 @@
  estate_nobles_ownership:0 "[Country.GetNobilityName] Land Ownership"
  estate_burghers_ownership:0 "[Country.GetBurghersName] Land Ownership"
  estate_vaisyas_ownership:0 "[Country.GetVaishyasName] Land Ownership"
- estate_cossacks_ownership:0 "[Country.GetCossacksName] Land Ownership"
+ estate_cossacks_ownership:0 "$estate_cossacks$ Land Ownership"
  estate_nomadic_tribes_ownership:0 "[Country.GetTribesName] Land Ownership"
  estate_dhimmi_ownership:0 "[Country.GetDhimmiName] Land Ownership"
  estate_jains_ownership:0 "[Country.GetJainsName] Land Ownership"
