--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -69,7 +69,7 @@
  ruhigwald_area:0 "Ruhigwald"
  zieglerwald_area:0 "Zieglerwald"
  medulimus_area:0 "Medulimus"
- greater_kuhficker_area:0 "Greater Kuhficker"
+ greater_kuhfecker_area:0 "Greater Kuhfecker"
  aufentine_area:0 "Aufentine"
  luchter_area:0 "Grossfeld"
  nordkirche_area:0 "Nordkirche"
