--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -254,8 +254,8 @@
  SCH_ADJ:0 "Schwarzwalder"
  MAG:0 "Magkirche"
  MAG_ADJ:0 "Magkircher"
- KUF:0 "Kuhficker"
- KUF_ADJ:0 "Kuhficker"
+ KUF:0 "Kuhfecker"
+ KUF_ADJ:0 "Kuhfecker"
  MAS:0 "Magstadt"
  MAS_ADJ:0 "Magstadter"
  ROT:0 "Rotzwasch"
