--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -652,7 +652,7 @@
  PROV_ADJ651:0 "Granitz"
  PROV_ADJ652:0 "Ausein"
  PROV_ADJ653:0 "Ereihen"
- PROV_ADJ654:0 "Kuhficker"
+ PROV_ADJ654:0 "Kuhfecker"
  PROV_ADJ655:0 "Landsberg"
  PROV_ADJ656:0 "Neufort"
  PROV_ADJ657:0 "Altfort"
