--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -652,7 +652,7 @@
  PROV651:0 "Granitz"
  PROV652:0 "Ausein"
  PROV653:0 "Ereihen"
- PROV654:0 "Kuhficker"
+ PROV654:0 "Kuhfecker"
  PROV655:0 "Landsberg"
  PROV656:0 "Neufort"
  PROV657:0 "Altfort"
