Chilverchian March Modifiers Localisation
- title

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -9,3 +9,13 @@ chilverchian_march_cultivate_local_culture_desc:0 "We will develop local cities 
 chilverchian_march_recruit_general:0 "Recruit Chilverchian General"
 chilverchian_march_recruit_general_desc:0 "We will recruit general from our homeland"
 
+chilverchian_march_peasant_rebellion:0 "Local Peasant Rebellion"
+chilverchian_march_nobility_sabotage:0 "Nobility Sabotage"
+chilverchian_march_nobility_rights_increased:0 "Nobility Rights Increased"
+chilverchian_march_conversion_efforts:0 "Conversion Efforts"
+chilverchian_march_local_autonomy:0 "Local Autonomy"
+chilverchian_march_resettlement_fear:0 "Resettlement Fear"
+chilverchian_march_cultivate_culture:0 "Cultivate Local Culture"
+
+
+
