Chilverchian March Event Localisation
-title

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -17,5 +17,31 @@ chilverchian_march_local_autonomy:0 "Local Autonomy"
 chilverchian_march_resettlement_fear:0 "Resettlement Fear"
 chilverchian_march_cultivate_culture:0 "Cultivate Local Culture"
 
+td_chilverchian_marches.1.t:0 "Local Peasants against Oppression"
+td_chilverchian_marches.1.desc:0 "Peasants are being repressed by local noble, what do we do"
+td_chilverchian_marches.1.a:0 "Give them protection and persecute that noble"
+td_chilverchian_marches.1.b:0 "I don't care"
+
+td_chilverchian_marches.2.t:0 "Nobility demands more rights"
+td_chilverchian_marches.2.desc:0 "Our nobility feels like we aren't treating them with respect recently, they demand more rights to be recompensated"
+td_chilverchian_marches.2.a:0 "Their demand is declined"
+td_chilverchian_marches.2.b:0 "We will give them their rights"
+
+td_chilverchian_marches.3.t:0 "Peasants rebel against us"
+td_chilverchian_marches.3.desc:0 "Peasants decided to rebel against our rule, what do we do"
+td_chilverchian_marches.3.a:0 "Crush them!"
+td_chilverchian_marches.3.b:0 "Force nobles to recompensate them"
+
+td_chilverchian_marches.4.t:0 "Assimilation Debates"
+td_chilverchian_marches.4.desc:0 "People in cities are debating about our assimilation policy. What should we do?"
+td_chilverchian_marches.4.a:0 "Support pro-assimilation side"
+td_chilverchian_marches.4.b:0 "Support anti-assimilation side"
+
+td_chilverchian_marches.5.t:0 "Resettlement Permission"
+td_chilverchian_marches.5.desc:0 "Local nobles want to resettle old population and settle population from the homelands. What do we do?"
+td_chilverchian_marches.5.a:0 "Grant autonomy to local community"
+td_chilverchian_marches.5.b:0 "Allow it, but do it slowly"
+td_chilverchian_marches.5.c:0 "Give them full rights to do so"
+
 
 
