chilverchian march mechanic
- added value change after:
* promoted culture
* demoted culture
* manual culture conversion
- added mechanic description

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -1,6 +1,9 @@
 ﻿l_english:
 ability_chilverchian_march_assimilation_mechanic:0 "Chilverchian March Assimilation"
 chilverchian_march_assimilation:0 "Local Assimilation"
+chilverchian_march_assimilation_desc:0 "Shows how assimilated our government and nobility is to local cultures\n§YIncreased by:§!\n-promoting local cultures\n§YDecreased by:§!\n-demoting local cultures\n-manually converting cultures in provinces"
+
+
 chilverchian_march_assimilation_gain_modifier:0 "Local Assimilation"
 chilverchian_march_recruit_local_population:0 "Recruit Local Population"
 chilverchian_march_recruit_local_population_desc:0 "We will recruit local soldiers"
