--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
+## Mechanics
 ability_chilverchian_march_assimilation_mechanic:0 "Chilverchian March Assimilation"
 chilverchian_march_assimilation:0 "Local Assimilation"
 chilverchian_march_assimilation_desc:0 "Shows how assimilated our government and nobility is to local cultures\n§YIncreased by:§!\n-promoting local cultures\n§YDecreased by:§!\n-demoting local cultures\n-manually converting cultures in provinces"
-
 
 chilverchian_march_assimilation_gain_modifier:0 "Local Assimilation"
 chilverchian_march_recruit_local_population:0 "Recruit Local Population"
@@ -12,6 +12,7 @@ chilverchian_march_cultivate_local_culture_desc:0 "We will develop local cities 
 chilverchian_march_recruit_general:0 "Recruit Chilverchian General"
 chilverchian_march_recruit_general_desc:0 "We will recruit general from our homeland"
 
+## Modifiers
 chilverchian_march_peasant_rebellion:0 "Local Peasant Rebellion"
 chilverchian_march_nobility_sabotage:0 "Nobility Sabotage"
 chilverchian_march_nobility_rights_increased:0 "Nobility Rights Increased"
@@ -20,6 +21,7 @@ chilverchian_march_local_autonomy:0 "Local Autonomy"
 chilverchian_march_resettlement_fear:0 "Resettlement Fear"
 chilverchian_march_cultivate_culture:0 "Cultivate Local Culture"
 
+## Events
 td_chilverchian_marches.1.t:0 "Local Peasants against Oppression"
 td_chilverchian_marches.1.desc:0 "Peasants are being repressed by local noble, what do we do"
 td_chilverchian_marches.1.a:0 "Give them protection and persecute that noble"
