council of trent loc

--- a/localisation/leviathan_l_english.yml
+++ b/localisation/leviathan_l_english.yml
@@ -1497,7 +1497,7 @@
  monument_events.5.b:0 "This will show our superiority over [SUN.GetName]."
  monument_events.5.c:0 "We should send someone from our council to take care of it."
  monument_events.5.e:0 "This would make a powerful capital."
- opinion_trent:0 "Council of Trent"
+ opinion_trent:0 "Liemarianism"
  coup_attempt_disaster:0 "Coup Attempt"
  coup_attempt_disaster_desc:0 "There are people moving in the shadows attempting to overthrow our ruler."
  coup_attempt_disaster_resolved_tt:0 "The coup has ended"
