--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -21,6 +21,9 @@ chilverchian_march_local_autonomy:0 "Local Autonomy"
 chilverchian_march_resettlement_fear:0 "Resettlement Fear"
 chilverchian_march_cultivate_culture:0 "Cultivate Local Culture"
 
+## Forming
+vinalion_culture_chance_explanation_tt:0 "There is a 25% chance to convert each province with accepted culture to vinalien culture"
+
 ## Events
 td_chilverchian_marches.1.t:0 "Local Peasants against Oppression"
 td_chilverchian_marches.1.desc:0 "Peasants are being repressed by local noble, what do we do"
