--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -27,6 +27,26 @@
  geniburgh_increase_power_desc:0 "Increase our efforts in establishing nation-wide administration."
  NAR_Reform_into_a_real_country_TT:0 "§YGeniburgh Company§! will get an event to reform into §YNiewebehatland§!."
  geniburgh_company.1.t:0 "Assuming Kakigian Identity"
- geniburgh_company.1.desc:0 "As we settle into this new and strange land, it becomes clear that we have grown beyond a mere mercenary company. We now need to embrace our new identity."
+ geniburgh_company.1.desc:0 "As we settle into this new and strange land, it becomes clear that we have grown beyond a mere mercenary company. We now need to embrace our new identity. Many are wondering about the nature of our new nation. Should we stick to our meritocratic traditions? Or should [Root.Monarch.GetName] become a monarch?"
  geniburgh_company.1.a:0 "Let's reform into a Republic!"
  geniburgh_company.1.b:0 "We should become a Monarchy!"
+ geniburgh_company.2.t:0 "Important Officer Retires"
+ geniburgh_company.2.desc:0 "We just got a letter from one of our most renowned officers. While not necessary lengthy, it carries an important information - he is considering retirement from mercenary work. The news came as a shock to everyone, but his decision is respected in the ranks nonetheless."
+ geniburgh_company.2.a:0 "Your service will not be forgotten."
+ geniburgh_company.2.b:0 "Convince him by giving him a promotion."
+ geniburgh_company.2.c:0 "maybe it's time for me, too..."
+ geniburgh_company.3.t:0 "Old veterans settle down"
+ geniburgh_company.3.desc:0 "Life of a mercenary soldier is not an easy one. Costant threats and risking your life for a few coins and stale bread is the norm among the lower ranks. If someone is able to survive first few years of the service, they'll surely try to retire soon after. Many of our long-serving soldiers slowly settle down in our newly claimed lands to lead a life of peace."
+ geniburgh_company.3.a:0 "Grant them some holdings"
+ geniburgh_company.3.b:0 "Good for them."
+ geniburgh_company.4.t:0 "New settlement prospers"
+ geniburgh_company.4.desc:0 "Village founded by our veterans a few years ago is quickly growing, housing more argenian population."
+ geniburgh_company.4.a:0 "I'll move there when i retire..."
+ geniburgh_company.5.t:0 "Locals clash with settlers"
+ geniburgh_company.5.desc:0 "Village founded by our veterans a few years ago has found itself in a clash with the native population of the steppe. They want our settlers to leave these lands and people in peace. Should we intervene?"
+ geniburgh_company.5.a:0 "Crush them"
+ geniburgh_company.5.b:0 "Force the colonists to relocate"
+ geniburgh_company.6.t:0 "Local Chieftain challenges the Government"
+ geniburgh_company.6.desc:0 "News are coming from the province of [local_ruler_liar_et.GetName] - local warlord is officialy challenging our government for autonomy in his 'domain'. He threatens to deploy 'millions' of men to the battlefield and bathe in our dirty blood. How should we deal with this lunatic?"
+ geniburgh_company.6.a:0 "Oh? youre approaching ME?"
+ geniburgh_company.6.b:0 "He is kind of scary though..."
