Chilverch Marches - temporary loc
- added localisation to new features

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -51,5 +51,17 @@ td_chilverchian_marches.5.a:0 "Grant autonomy to local community"
 td_chilverchian_marches.5.b:0 "Allow it, but do it slowly"
 td_chilverchian_marches.5.c:0 "Give them full rights to do so"
 
+td_chilverchian_marches.6.t:0 "Formation of Vinalion"
+td_chilverchian_marches.6.desc:0 "Our conquest in Camaria has bringed us glory and fame. But we need to finally settle and rethink our national identity. What path should we choose?"
+td_chilverchian_marches.6.a:0 "Assimilate to local culture as equals!"
+td_chilverchian_marches.6.b:0 "Maintain our current structure and culture!"
 
+td_chilverchian_marches.7.t:0 "Formation of Confinia"
+td_chilverchian_marches.7.desc:0 "Our conquest against Anavatic people has bringed us glory and fame. But we need to finally settle and rethink our national identity. What path should we choose?"
+td_chilverchian_marches.7.a:0 "Assimilate to local culture as equals!"
+td_chilverchian_marches.7.b:0 "Maintain our current structure and culture!"
 
+td_chilverchian_marches.8.t:0 "Formation of Philippia"
+td_chilverchian_marches.8.desc:0 "Our conquest against Marstonians has bringed us glory and fame. But we need to finally settle and rethink our national identity. What path should we choose?"
+td_chilverchian_marches.8.a:0 "Assimilate to local culture as equals!"
+td_chilverchian_marches.8.b:0 "Maintain our current structure and culture!"
