Chilverch Knighthood Mechanics - loc
- added localisation to knighthood mechanics

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -12,6 +12,16 @@ chilverchian_march_cultivate_local_culture_desc:0 "We will develop local cities 
 chilverchian_march_recruit_general:0 "Recruit Chilverchian General"
 chilverchian_march_recruit_general_desc:0 "We will recruit general from our homeland"
 
+
+ability_chilverchian_knighthood_fervor_mechanic:0 "Chilverchian Knighthood Fervor"
+chilverchian_knighthood_knightly_fervor:0 "Knightly Fervor"
+chilverchian_knighthood_knightly_fervor_desc:0 "Shows how eager our knights and government is to wage wars\n§YIncreased by:§!\n-having high ruler military skill\n-using interaction button\n§YDecreased by:§!\n-accumulated fervor"
+
+chilverchian_knighthood_knightly_fervor_gain_modifier:0 "Knightly Fervor"
+monthly_chilverchian_knighthood_knightly_fervor:0 "Monthly Knightly Fervor"
+chilverchian_knighthood_mobilisation:0 "Mobilisation"
+chilverchian_knighthood_mobilisation_desc:0 "We will use our authority to increase national fervor"
+
 ## Modifiers
 chilverchian_march_peasant_rebellion:0 "Local Peasant Rebellion"
 chilverchian_march_nobility_sabotage:0 "Nobility Sabotage"
