march formable fix
- fixed custom tooltip
- readded government rank change

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -33,6 +33,8 @@ chilverchian_march_cultivate_culture:0 "Cultivate Local Culture"
 
 ## Forming
 vinalion_culture_chance_explanation_tt:0 "There is a 25% chance to convert each province with accepted culture to vinalien culture"
+confinia_culture_chance_explanation_tt:0 "There is a 25% chance to convert each province with accepted culture to confinian culture"
+philippia_culture_chance_explanation_tt:0 "There is a 25% chance to convert each province with accepted culture to philippian culture"
 
 ## Events
 td_chilverchian_marches.1.t:0 "Local Peasants against Oppression"
