--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -53,7 +53,7 @@ td_chilverchian_marches.3.a:0 "Crush them!"
 td_chilverchian_marches.3.b:0 "Crush nobility instead!"
 
 td_chilverchian_marches.4.t:0 "Assimilation Debates"
-td_chilverchian_marches.4.desc:0 "Situation of this country sparked debates in our cities. Our cities are now divided between two camps supporting different stances and now they demand official response from us. Showing support for one side can further our efforts. What should we do?"
+td_chilverchian_marches.4.desc:0 "Situation of this country sparked debates in cities. Our population is now divided between two camps supporting different stances and now they demand official response from us. Showing support for one side can further our efforts. What should we do?"
 td_chilverchian_marches.4.a:0 "Support pro-assimilation camp"
 td_chilverchian_marches.4.b:0 "Support pro-repression camp"
 
