chilverchian march localisation
- added loc to ideas
- changed 1 value in ideas
- edgified chilverchian knighthood

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -1,4 +1,21 @@
 ﻿l_english:
+## Ideas
+chilverchian_march_ideas:0 "Chilverchian March Ideas"
+marchien_foreign_army:0 "Foreign Army"
+marchien_foreign_army_desc:0 "We resorted to using mercenaries when we had problems to mobilise our local population"
+marchien_noble_court:0 "Noble Court"
+marchien_noble_court_desc:0 "Our court is composed from the greatest nobles of Chilverchia. Because of that we are very prestigous and corruption is low"
+marchien_spread_the_word:0 "Spread The Word"
+marchien_spread_the_word_desc:0 "When we decided to conquest these lands we also bringed clergy with us to convert these lands. They will show them the proper way"
+marchien_mobile_warfare:0 "Mobile warfare"
+marchien_mobile_warfare_desc:0 "Our military is mostly based on idea of cavalry making us more mobile than typical army. We should expand this idea so we can outmaneuver our enemies"
+marchien_outside_ideas:0 "Outside Ideas"
+marchien_outside_ideas_desc:0 "Conquering these lands allowed us to discover new innovations. We should use everything in our power to expand chilverchian knowledge"
+marchien_powerful_inquisition:0 "Powerful Inquisition"
+marchien_powerful_inquisition_desc:0 "Heresies are like plague that is infecting our faith. Because of that our inquisition recieved more powers to combat that"
+marchien_cavalry_culture:0 "Cavalry Culture"
+marchien_cavalry_culture_desc:0 "Huge focus on knighthood and horse riding allows us to create one of the best in terms of cavalry."
+
 ## Mechanics
 ability_chilverchian_march_assimilation_mechanic:0 "Chilverchian March Assimilation"
 chilverchian_march_assimilation:0 "Local Assimilation"
